# zk_stack_cli

./: Cargo.toml  Dockerfile  Makefile  README.md  build.rs
.github/workflows/: quality.yaml  tag.yaml
contract_abi/: StorageFibonacci.json
contract_examples/: StorageFibonacci.sol
contract_examples/combined-json/: StorageFibonacci.json
etc/: config.toml
src/: cli.rs  config.rs  lib.rs  main.rs
src/commands/: account_balance.rs  autocomplete.rs  call.rs  chain.rs  compile.rs  config.rs  contract.rs  deploy.rs  deposit.rs  download_compiler.rs  encode.rs  get_all_account_balances.rs  get_block_details.rs  get_bridge_contracts.rs  get_bridgehub_contract.rs  get_bytecode_by_hash.rs  get_code.rs  get_confirmed_tokens.rs  get_contract.rs  get_fee_params.rs  get_l1_base_token_address.rs  get_l1_batch_details.rs  get_l1_batch_number.rs  get_l1_chain_id.rs  get_l1_gas_price.rs  get_l2_to_l1_proof.rs  get_main_contract.rs  get_protocol_version.rs  get_transaction.rs  main_contract.rs  mod.rs  pay.rs  prover.rs  selector.rs  send.rs  test.rs  testnet_paymaster.rs  transaction_details.rs  transfer.rs  utils.rs  (+2 more)
src/commands/autocomplete/: mod.rs
src/commands/chain/: balance.rs  finalize_deposit_transaction.rs  get_all_account_balances.rs  get_block_details.rs  get_bridge_contracts.rs  get_bridgehub_contract.rs  get_bytecode_by_hash.rs  get_code.rs  get_confirmed_tokens.rs  get_fee_params.rs  get_l1_base_token_address.rs  get_l1_batch_details.rs  get_l1_batch_number.rs  get_l1_chain_id.rs  get_l1_gas_price.rs  get_l2_to_l1_proof.rs  get_main_contract.rs  get_protocol_version.rs  get_transaction.rs  mod.rs  testnet_paymaster.rs  transaction_details.rs
src/commands/compile/: compiler.rs  mod.rs  output.rs  project.rs
src/commands/config/: create.rs  delete.rs  display.rs  edit.rs  list.rs  mod.rs  set.rs
src/commands/config/common/: default_values.rs  messages.rs  mod.rs
src/commands/contract/: call.rs  deploy.rs  erc20_l1_mint.rs  mint.rs  mod.rs  send.rs
src/commands/contracts/: bridgehub.rs  governance.rs  mod.rs  state_transition_manager.rs
src/commands/contracts/bridgehub/: accept_admin.rs  admin.rs  (+6 more)
src/commands/db/: mod.rs  prover.rs  server.rs  types.rs
src/commands/test/: erc20_l1_mint.rs  loadtest.rs  mod.rs
src/commands/utils/: balance.rs  contracts.rs  erc20.rs  mod.rs  wallet.rs
src/commands/wallet/: address.rs  balance.rs  deposit.rs  finalize_withdraw.rs  mod.rs  private_key.rs  transfer.rs
src/utils/: balance.rs  chain.rs  contract.rs  contracts.rs  gas_tracker.rs  messages.rs  mod.rs  prover_status.rs  test.rs  wallet.rs
src/utils/config/: default_values.rs  messages.rs  mod.rs
src/utils/db/: for_batch_queries.rs  mod.rs  prover.rs  queries.rs  types.rs
(+15 files in other folders)
