[package]
name = "zksync-era-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zksync-web3-rs = { version = "0.1.1", features = ["ethers-solc"]}
tokio = "1"
env_logger = "0.10"
log = "0.4"
clap = "4.3"
eyre = "0.6"
serde_json = "1"
serde = "1"
thiserror = "1"
hex = "0.4"
dirs = "5.0.1"

[build-dependencies]
dirs = "5.0.1"
