[package]
name = "zks"
version = "0.1.0"
edition = "2021"

[lints.clippy]
allow_attributes_without_reason = "warn"
as_conversions = "warn"
as_ptr_cast_mut = "warn"
unnecessary_cast = "warn"
clone_on_ref_ptr = "warn"
create_dir = "warn"
dbg_macro = "warn"
decimal_literal_representation = "warn"
default_numeric_fallback = "warn"
deref_by_slicing = "warn"
empty_structs_with_brackets = "warn"
float_cmp_const = "warn"
fn_to_numeric_cast_any = "warn"
indexing_slicing = "warn"
iter_kv_map = "warn"
manual_clamp = "warn"
manual_filter = "warn"
map_err_ignore = "warn"
uninlined_format_args = "warn"
unseparated_literal_suffix = "warn"
unused_format_specs = "warn"
single_char_lifetime_names = "warn"
str_to_string = "warn"
string_add = "warn"
string_slice = "warn"
string_to_string = "warn"
try_err = "warn"
unwrap_used = "deny"
expect_used = "deny"
module_inception = "allow"
module_name_repetitions = "allow"
let_underscore_must_use = "allow"


[dependencies]
zksync-ethers-rs = { git = "https://github.com/lambdaclass/zksync-web3-rs", branch = "zksync-ethers-rs-v1" }
tokio = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
log = "0.4"
clap = "4.3"
eyre = "0.6"
serde_json = "1"
serde = "1"
thiserror = "1"
hex = "0.4"
dirs = "5.0.1"
toml = "0.8.19"
dialoguer = "0.11"
colored = "2.1.0"
clap_complete = "4.5.17"
spinoff = "0.8.0"
sqlx = { version = "0.7.3", default-features = false, features = [
    "runtime-tokio",
    "tls-native-tls",
    "macros",
    "postgres",
    "bigdecimal",
    "rust_decimal",
    "chrono",
    "json",
    "migrate",
    "ipnetwork",
]}
chrono = "0.4"
itertools = "0.13.0"
bincode = "1.3.3"
